# can

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_detect3  Dockerfile_detect4  README.Docker.md  README.md  TODO.md  all.cmd  best3.cmd  best4.cmd  check.cmd  compose.yaml  cuda.md  d3.cmd  d4.cmd  detect3.cmd  detect4.cmd  doit.cmd  go.cmd  test.md  time.cmd
cmd/bicks/: Cargo.toml  bicks.rs  build.rs  read.me
cmd/bm/: Cargo.toml  ReadMe.md  bm.rs
cmd/chart1/: Cargo.toml  chart1.rs
cmd/chart2/: Cargo.toml  build.rs  chart2.rs
cmd/cudac/: Cargo.toml  cuda.md  cudac.rs
cmd/d3client/: Cargo.toml  d3client.rs
cmd/dbuilder/: Cargo.toml  dbuilder.rs
cmd/detect3/: Cargo.toml  detect3.rs  readme.md
cmd/detect4/: Cargo.toml  detect4.rs  readme.md
cmd/dur/: Cargo.toml  dur.rs
cmd/edge/: Cargo.toml  edge.rs
cmd/itr/: Cargo.toml  itr.rs
cmd/medius_server/: Cargo.toml  clp.cmd  clp9447.cmd  clp9447_4_0.cmd  clp9447_4_1.cmd  clp9447_4_2.cmd  clpBad9447.cmd  clp_remote9447.cmd  clp_remote9447_4_0.cmd  describe.md  docker-compose.yaml  read.md
cmd/medius_server/src/: main.rs
cmd/medius_server/static/: llms.txt  openapi.yaml  openapi_ui.html  swagger_ui.html
cmd/setbuff/: Cargo.toml  setbuff.rs
cmd/test3/: Cargo.toml  test3.rs
cmd/train/: Cargo.toml  train.rs
cmd/ub/: Cargo.toml  ub.rs
crates/can_data/: Cargo.toml  can_data.rs
crates/can_utils/: Cargo.toml  can_utils.rs
crates/ho/: Cargo.toml  ho.rs  ho.rs_
crates/medius_data/: Cargo.toml  medius_data.rs
crates/medius_meta/: Cargo.toml  medius_meta.rs
crates/medius_model/: Cargo.toml  medius_model.rs
crates/medius_parser/: Cargo.toml  medius_parser.rs
crates/medius_utils/: Cargo.toml  medius_utils.rs
crates/total/: Cargo.toml  total.rs
crates/utils/: Cargo.toml  fft.rs  mfcc.rs  statistics.rs  t_sne.rs  umap.rs  utils.rs
data/: src.csv
data/B260_ST/: x.csv  y.csv
data/S10_SF/: x.csv  y.csv
models/: model.safetensors
models/C_100_40_10_H34_RN_100/: model.safetensors
models/C_40_10_B260_ST/: model.safetensors
models/R_100_40_10_B260_ST_1/: model.safetensors
