[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# default-run = "edge"

[workspace]
members = [
    "cmd/edge", "cmd/itr", "cmd/bm", "cmd/ub", "cmd/setbuff", "cmd/chart1",
    "cmd/train", "cmd/detect3", "cmd/test3", "cmd/dur", "cmd/medius_server",
    "cmd/bicks", "cmd/cudac",
    "crates/can_data", "crates/utils",
    "crates/medius_data", "crates/medius_utils", "crates/medius_model",
    "crates/medius_meta", "crates/medius_parser", "cmd/bicks",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
#candle-core = { version = "0.8.3   ", features = ["cuda"] }
candle-core = "0.8.3"
candle-nn = "0.8.3"
clap = { version = "4.5.31", features = ["derive"] }
clipboard = "0.5.0"
#cudarc = { version = "0.12.2", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
rand = "0.9.0"
chrono = { version="0.4.40", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
safetensors = "=0.4.5" # do not update this version
rustfft = "6.2.0"
ndarray = "0.16.1"
num-complex = "0.4.6"
plotly = "0.12.1"




