[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# default-run = "edge"

[workspace]
members = [
    "cmd/edge", "cmd/itr", "cmd/bm",
    "cmd/ub", "cmd/setbuff", "cmd/cudac",
    "cmd/chart1", "cmd/chart2", "cmd/bicks",
    "cmd/train", "cmd/detect3", "cmd/detect4", "cmd/test3",
    "cmd/dur", "cmd/medius_server", "cmd/bicks", "cmd/dbuilder",
    "crates/medius_data", "crates/medius_utils", "crates/medius_model",
    "crates/medius_meta", "crates/medius_parser", "crates/can_data",
    "crates/utils", "crates/ho", 
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
candle-core = "0.9.1"
candle-nn = "0.9.1"
clap = { version = "4.5.40", features = ["derive"] }
clipboard = "0.5.0"
csv = "1.3.1"
rand = "0.9.1"
rand_distr = "0.5.1"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
rustfft = "6.4.0"
ndarray = "0.16.1"
# ndarray-rand = "0.15.0"
num-complex = "0.4.6"
plotly = "0.12.1"
indicatif = "0.17.12"
sysinfo = "0.35.2"

# do not update this version for compatibility with candle-nn
safetensors = "=0.4.5"

