[package]
name = "bicks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndarray.workspace = true
num-complex.workspace = true
utils = { path = "../../crates/utils" }

[target.'cfg(windows)'.dependencies]
plotly.workspace = true

[[bin]]
path = "./bicks.rs"
name = "bicks"
