[package]
name = "chart1"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
plotly.workspace = true

[[bin]]
path = "./chart1.rs"
name = "chart1"


