[package]
name = "chart1"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
plotly.workspace = true

[features]
# Define a feature that represents Windows support
os_windows = []

[[bin]]
path = "./chart1.rs"
name = "chart1"
required-features = ["os_windows"]

