[package]
name = "chart2"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
medius_data = { path = "../../crates/medius_data" }
utils = { path = "../../crates/utils" }

[target.'cfg(windows)'.dependencies]
plotly.workspace = true

[[bin]]
path = "./chart2.rs"
name = "chart2"


