[package]
name = "chart2"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
medius_data = { path = "../../crates/medius_data" }
utils = { path = "../../crates/utils" }

[target.'cfg(windows)'.dependencies]
plotly.workspace = true

[features]
# Define a feature that represents Windows support
os_windows = []

[[bin]]
path = "./chart2.rs"
name = "chart2"
required-features = ["os_windows"]
