[package]
name = "cudac"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# cuda = ["cuda-driver-sys", "candle-core", "candle-core/cuda"]

[dependencies]
candle-core = { workspace = true, optional = true }
cuda-driver-sys = { version = "0.3.0", optional = true }

[[bin]]
path = "./cudac.rs"
name = "cudac"


