[package]
name = "cudac"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# cuda = ["cuda-driver-sys", "candle-core", "candle-core/cuda"]

[dependencies]
candle-core = { version = "0.9.1", optional = true, default-features = false }
cuda-driver-sys = { version = "0.3.0", optional = true, default-features = false }

[[bin]]
path = "./cudac.rs"
name = "cudac"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(cuda)'] }
