[package]
name = "detect3"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
medius_data = { path = "../../crates/medius_data" }
medius_model = { path = "../../crates/medius_model" }

[[bin]]
path = "./detect3.rs"
name = "detect3"

