[package]
name = "detect3"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
medius_utils = { path = "../../crates/medius_utils" }
medius_meta = { path = "../../crates/medius_meta" }

[[bin]]
path = "./detect3.rs"
name = "detect3"

