[package]
name = "edge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
can_data = { path = "../../crates/can_data" }
can_utils = { path = "../../crates/can_utils" }
#cudarc = { version = "=0.12.0", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }

[features]
default = ["cuda"]
cuda = []

[[bin]]
path = "./edge.rs"
name = "edge"