[package]
name = "edge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
can_data = { path = "../../crates/can_data" }
can_utils = { path = "../../crates/can_utils" }

[features]
default = ["cuda"]
cuda = []

[[bin]]
path = "./edge.rs"
name = "edge"

