[package]
name = "itr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
#cudarc = { version = "=0.12.0", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }

[features]
default = ["cuda"]
cuda = []

[[bin]]
path = "./itr.rs"
name = "itr"


