[package]
name = "train"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
medius_model = { path = "../../crates/medius_model" }
medius_meta = { path = "../../crates/medius_meta" }

[[bin]]
path = "./train.rs"
name = "train"

