[package]
name = "medius_data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candle-core.workspace = true
rand.workspace = true
rand_pcg.workspace = true
csv.workspace = true
utils = { path = "../../crates/utils" }

[lib]
path = "./medius_data.rs"
doctest = false