[package]
name = "medius_meta"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
serde.workspace = true
serde_yaml.workspace = true
clap.workspace = true
utils = { path = "../../crates/utils" }

[lib]
path = "medius_meta.rs"
doctest = false