[package]
name = "medius_model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
medius_data = { path = "../../crates/medius_data" }
utils = { path = "../../crates/utils" }

[lib]
path = "./medius_model.rs"
