[package]
name = "medius_model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
#cudarc = { workspace = true, optional = true }
medius_data = { path = "../../crates/medius_data" }
medius_meta = { path = "../../crates/medius_meta" }

[features]
default = []
#cudnn = ["cuda", "cudarc/cudnn"]
#cudarc = ["cuda","cudnn"]

[lib]
path = "./medius_model.rs"
doctest = false
