[package]
name = "medius_parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
clap = { workspace = true }
utils = { path = "../../crates/utils" }
pacmog = "0.5.0"
rustfft = "6.2.0"

[lib]
path = "./medius_parser.rs"
