[package]
name = "medius_parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
medius_meta = { path = "../../crates/medius_meta" }
utils = { path = "../../crates/utils" }
ho = { path = "../../crates/ho" }
pacmog = "0.6.0"

[lib]
path = "./medius_parser.rs"
doctest = false
