[package]
name = "utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustfft.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_distr.workspace = true
# ndarray.workspace = true
project-root = "0.2.2"
# ndarray-rand = "0.15.0"

[lib]
path = "utils.rs"
doctest = false
